tree-sitter-kanon/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.use_declaration,
      $.primitive_declaration,
      $.function_definition,
      $.rule_definition,
      $.extend_definition,
      $.node_declaration,
      $.sort_declaration,
      $.notation_declaration,
      $.type_definition,
      $.operator_declaration,
      $.constant_declaration,
      $.floating_attribute,
    ),

    // ------------------------------------------------------------------
    // Items

    function_definition: $ => seq(
      'fn',
      field('name', $.identifier),
      repeat(field('parameter', $.parameter)),
      optional(seq(':', field('return_type', $._type))),
      repeat($.attribute),
      '=',
      field('body', $._sequence_or_expression),
    ),

    rule_definition: $ => seq(
      'rule',
      field('name', $.identifier),
      repeat(field('parameter', $.parameter)),
      ':',
      field('spec', $._spec),
      repeat($.attribute),
      optional(seq(
        '=',
        choice(
          seq('|', field('cases', $.cases)),
          field('body', $._sequence_or_expression),
        ),
      )),
    ),

    _spec: $ => choice(
      $._simple_expression,
      $.application_expression,
      $.constructor_expression,
    ),

    extend_definition: $ => seq(
      'extend',
      field('kind', choice('rule', 'fn')),
      field('name', $.identifier),
      optional(seq('before', field('before', $.rule_name))),
      '=',
      optional('|'),
      field('cases', $.cases),
    ),

    attribute: $ => seq(
      '[@',
      field('name', $.attribute_name),
      repeat(field('argument', choice($.string, $.attribute_argument, $.number, $.boolean))),
      ']',
    ),

    attribute_name: $ => $._name,

    _name: $ => choice($.identifier, $.constructor),

    // ------------------------------------------------------------------
    // Functions and rules

    // [(v1 v2 : t)], or [(v : TBitVector n)], a term of that sort
    parameter: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      ':',
      choice(field('type', $._type), field('sort', $._sort_annotation)),
      ')',
    ),

    cases: $ => prec.right(sep1($.case, '|')),

    // [r: p when g -> e], the rule [r] of a rule function, or a case of a
    // match
    case: $ => seq(
      optional(seq(field('label', $.rule_name), ':')),
      field('pattern', $._pattern),
      optional(seq('when', field('guard', $._sequence_or_expression))),
      '->',
      field('body', $._sequence_or_expression),
    ),

    // rule names may be [not], [extend] or infix words
    rule_name: $ => choice($.identifier, 'not', 'extend'),

    // ------------------------------------------------------------------
    // Types

    _type: $ => choice($.function_type, $.tuple_type, $._type_application),

    _type_application: $ => choice(
      typeIdentifier($),
      $.parenthesized_type,
      $.type_application,
    ),

    // [t list], [(var * ty) list], [(t, int) pair]
    type_application: $ => seq(
      field('argument', choice($._type_application, $.type_arguments)),
      field('constructor', typeIdentifier($)),
    ),

    _sequence_or_expression: $ => choice($._expression, $.sequence_expression),

    _expression: $ => choice($._tuple_element, $.tuple_expression),

    _tuple_element: $ => choice(
      $._simple_expression,
      $.application_expression,
      $.constructor_expression,
      $.assert_expression,
      $.unary_expression,
      $.binary_expression,
      $.let_expression,
      $.match_expression,
      $.if_expression,
    ),

    let_expression: $ => prec.right(PREC.open, seq(
      'let',
      field('binding', $.let_binding),
      'in',
      field('body', $._sequence_or_expression),
    )),

    let_binding: $ => choice(
      seq(
        field('name', $.identifier),
        repeat1(field('parameter', $.parameter)),
        optional(seq(':', field('return_type', $._type))),
        '=',
        field('body', $._sequence_or_expression),
      ),
      seq(
        field('pattern', $._pattern),
        optional(seq(':', field('type', $._type))),
        '=',
        field('body', $._sequence_or_expression),
      ),
    ),

    match_expression: $ => prec.right(PREC.open, seq(
      'match',
      field('value', $._sequence_or_expression),
      'with',
      optional('|'),
      field('cases', $.cases),
    )),

    if_expression: $ => prec.right(PREC.open, seq(
      'if',
      field('condition', $._sequence_or_expression),
      'then',
      field('consequence', $._expression),
      'else',
      field('alternative', $._expression),
    )),

    tuple_expression: $ => prec(PREC.tuple, seq($._tuple_element, ',', $._tuple_rest)),

    // the remaining components of a tuple (rather than a [repeat1], which
    // would lose the precedence of the tuple)
    _tuple_rest: $ => prec.right(PREC.tuple, seq(
      $._tuple_element,
      optional(seq(',', $._tuple_rest)),
    )),

    binary_expression: $ => choice(
      ...INFIX.map(([level, assoc, ops]) => assoc(PREC[level], seq(
        field('left', $._tuple_element),
        field('operator', choice(...ops.map(o => alias(o, $.operator)))),
        field('right', $._tuple_element),
      ))),
      // [a urem b], an operator declared by [infix "urem"], after an
      // operand that cannot be applied to it (see the header)
      prec.left(PREC.mul, seq(
        field('left', $._tuple_element),
        field('operator', alias($.identifier, $.infix_word)),
        field('right', $._tuple_element),
      )),
    ),

    application_expression: $ => prec(PREC.app, seq(
      field('function', $.identifier),
      $._arguments,
    )),

    // the arguments of an application, as many as possible (rather than a
    // [repeat1], which would lose the precedence of the application)
    _arguments: $ => prec.right(seq(
      field('argument', $._simple_expression),
      optional($._arguments),
    )),

    constructor_expression: $ => prec(PREC.app, seq(
      field('constructor', $.constructor),
      field('argument', $._simple_expression),
    )),

    // [assert e], [not e]
    assert_expression: $ => prec(PREC.app, seq(
      field('operator', choice('assert', 'not')),
      field('argument', $._simple_expression),
    )),

    _simple_expression: $ => choice(
      $.identifier,
      $.constructor,
      $.boolean,
      $.number,
      $.unit,
      $.parenthesized_expression,
      $.typed_expression,
      $.list_expression,
      $.record_expression,
      $.field_expression,
      $.prefix_expression,
    ),

    parenthesized_expression: $ => seq('(', $._sequence_or_expression, ')'),

    // [(e : t)], or [(v : TBitVector n)], the sort of an operand of a spec
    typed_expression: $ => seq(
      '(',
      field('expression', $._sequence_or_expression),
      ':',
      choice(field('type', $._type), field('sort', $._sort_annotation)),
      ')',
    ),

    _sort_annotation: $ => choice($.constructor, $.constructor_expression),

    record_expression: $ => seq(
      '{',
      sep1($.field_initializer, ';'),
      optional(';'),
      '}',
    ),

    field_initializer: $ => seq(
      field('field', fieldIdentifier($)),
      '=',
      field('value', $._expression),
    ),

    field_expression: $ => prec(PREC.field, seq(
      field('record', $._simple_expression),
      '.',
      field('field', fieldIdentifier($)),
    )),

    // ------------------------------------------------------------------
    // Patterns

    _pattern: $ => choice(
      $.alias_pattern,
      $.or_pattern,
      $.tuple_pattern,
      $._tuple_pattern_element,
    ),

    _tuple_pattern_element: $ => choice(
      $._simple_pattern,
      $.attributed_pattern,
      $.binary_pattern,
      $.unary_pattern,
      $.constructor_pattern,
    ),

    alias_pattern: $ => prec.left(PAT.alias, seq(
      field('pattern', $._pattern),
      'as',
      field('name', $.identifier),
    )),

    or_pattern: $ => prec.left(PAT.or, seq(
      field('left', $._pattern),
      '|',
      field('right', $._pattern),
    )),

    tuple_pattern: $ => prec(PAT.tuple, seq($._tuple_pattern_element, ',', $._tuple_pattern_rest)),

    _tuple_pattern_rest: $ => prec.right(PAT.tuple, seq(
      $._tuple_pattern_element,
      optional(seq(',', $._tuple_pattern_rest)),
    )),

    // [(1, ~v) [@comm]]
    attributed_pattern: $ => prec.left(PAT.attr, seq(
      field('pattern', $._tuple_pattern_element),
      $.attribute,
    )),

    // operators on terms, as in expressions, but for [=], which ends the
    // pattern of a [let]
    binary_pattern: $ => choice(
      ...INFIX.map(([level, assoc, ops]) => assoc(PAT[level === 'or' ? 'or_op' : level === 'and' ? 'and_op' : level], seq(
        field('left', $._tuple_pattern_element),
        field('operator', choice(...ops.filter(o => o !== '=').map(o => alias(o, $.operator)))),
        field('right', $._tuple_pattern_element),
      ))),
      prec.left(PAT.mul, seq(
        field('left', $._tuple_pattern_element),
        field('operator', alias($.identifier, $.infix_word)),
        field('right', $._tuple_pattern_element),
      )),
    ),

    unary_pattern: $ => prec(PAT.unary, seq(
      field('operator', choice(alias('-', $.operator), 'not')),
      field('operand', $._tuple_pattern_element),
    )),

    // [~x], [!x]
    constructor_pattern: $ => prec(PAT.app, seq(
      field('constructor', $.constructor),
      field('argument', $._simple_pattern),
    )),

    _simple_pattern: $ => choice(
      $.wildcard,
      $.identifier,
      $.constructor,
      $.boolean,
      $.number,
      $.literal_pattern,
      $.unit,
      $.parenthesized_pattern,
      $.typed_pattern,
      $.list_pattern,
      $.record_pattern,
      $.prefix_pattern,
    ),

    // [#x], [#_]: an integer literal, binding its value
    literal_pattern: $ => seq('#', field('name', choice($.identifier, $.wildcard))),

    parenthesized_pattern: $ => seq('(', $._pattern, ')'),

    list_pattern: $ => seq(
      '[',
      optional(seq(sep1($._pattern, ';'), optional(';'))),
      ']',
    ),

    identifier: _ => /[a-z_][a-zA-Z0-9_']*/,

    constructor: _ => /[A-Z][a-zA-Z0-9_']*/,

    wildcard: _ => '_',

    number: _ => /[0-9]+/,

    boolean: _ => choice('true', 'false'),
